# SocketLibLinux

./: .gitignore  Android.mk  CMakeLists.txt  README.md  build.ps1  buildQMOD.ps1  copy.ps1  extern.cmake  gdb_debug.sh  lldb_debug.sh  meson.build  meson.options  mod.json  mod.template.json  qpm.json  qpm.shared.json  qpm_defines.cmake  setup.sh  testserver.ts
.github/workflows/: build-meson.yml  build-ndk.yml  publish.yml
scripts/: build_meson.sh  copy.ps1  gdb_debug.sh  profile.sh  setup.ps1
shared/: ClientSocket.hpp  ExclusiveSharedMutex.h  FieldWrapper.hpp  Message.hpp  ServerSocket.hpp  Socket.hpp  SocketHandler.hpp  SocketLogger.hpp  SocketUtil.hpp  StreamQueue.hpp
shared/queue/: blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h
shared/queue_internal/: lightweightsemaphore.h
shared/utils/: EventCallback.hpp
src/: ClientSocket.cpp  ServerSocket.cpp  Socket.cpp  SocketHandler.cpp  SocketLogger.cpp
test/include/: ClientSocketTest.hpp  ServerSocketTest.hpp  main.hpp  mainquest.hpp
test/src/: ClientSocketTest.cpp  ServerSocketTest.cpp  main.cpp  mainquest.cpp
